[www] Fix-up spinner alignment

--- a/node/www/css/style.less
+++ b/node/www/css/style.less
@@ -161,13 +161,13 @@ body
 .spin_btn
 {
     width:  14px;
-    height: 18px;
+    height: 20px;
 }
 
 .spin_btn .spinner
 {
     position:   relative;
-    top:        9px;
+    top:        10px;
     left:       8px;
 }
 
